# hdf5plugin-benchmark

./: .gitignore  README.md  benchmark.ipynb  benchmark.py  pyproject.toml
