[project]
name = "hdf5plugin-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5glance>=0.9.0",
    "h5py>=3.16.0",
    "hdf5plugin>=6.0.0",
    "ipympl>=0.10.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
]
